--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <title>Köppen-Geiger Globe - Mapbox</title>
+  <title>zoomKöppen-Geiger Globe - Mapbox</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.js"></script>
   <link href="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.css" rel="stylesheet" />
@@ -34,7 +34,7 @@
 <body>
 <div id="map"></div>
 <div id="opacityWrapper">
-  <label for="opacitySlider">🗂</label>
+  <label for="opacitySlider">📒</label>
   <input type="range" id="opacitySlider" min="0" max="1" step="0.05" value="0.8" />
 </div>
 
@@ -79,6 +79,8 @@
       .setLngLat([39.271406, -7.046950])
       .setPopup(new mapboxgl.Popup().setText('House 5\niHelp Eco Village, Mkuranga, Tanzania'))
       .addTo(map);
+
+    map.addControl(new mapboxgl.NavigationControl({ showCompass: false }));
   });
 </script>
 </body>
