--- a/index.html
+++ b/index.html
@@ -19,20 +19,15 @@
     #opacityWrapper {
       position: absolute;
       top: 10px;
-      right: 10px;
+      left: 10px;
       background: white;
       padding: 8px 12px;
       border-radius: 6px;
       box-shadow: 0 0 6px rgba(0,0,0,0.15);
       z-index: 10;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
     }
     #opacitySlider {
-      writing-mode: bt-lr;
-      transform: rotate(270deg);
-      height: 100px;
+      width: 100px;
       margin-top: 6px;
     }
     #opacityControls {
