see climate zones

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 <body>
 <div id="map"></div>
 <div id="opacityWrapper">
-  <button id="toggleOpacity" title="Toggle opacity control">🎚️</button>
+  <button id="toggleOpacity" title="Toggle opacity control">See Climate Zones</button>
   <div id="opacityControls">
     <input type="range" id="opacitySlider" min="0" max="1" step="0.05" value="0.8" />
   </div>
