--- a/index.html
+++ b/index.html
@@ -52,7 +52,13 @@
 <body>
 <div id="map"></div>
 <div id="opacityWrapper">
-  <button id="toggleOpacity" title="Toggle opacity control">See Climate Zones</button>
+  <button id="toggleOpacity" title="Toggle opacity control">Show Climate Zones</button>
+  <div id="opacityControls">
+    <input type="range" id="opacitySlider" min="0" max="1" step="0.05" value="0.5" />
+  </div>
+</div>
+  <div id="opacityWrapper">
+  <button id="toggleOpacity" title="Toggle opacity control">Show Legend</button>
   <div id="opacityControls">
     <input type="range" id="opacitySlider" min="0" max="1" step="0.05" value="0.5" />
   </div>
