--- a/index.html
+++ b/index.html
@@ -110,14 +110,74 @@
       map.setPaintProperty('koppen-layer', 'fill-opacity', parseFloat(e.target.value));
     });
 
-    new mapboxgl.Marker({ color: 'green' })
-      .setLngLat([39.271406, -7.046950])
+    // Approximate pin location
+    const pinCoords = [39.271406, -7.046950];
+
+    // White marker
+    new mapboxgl.Marker({ color: 'white' })
+      .setLngLat(pinCoords)
       .setPopup(new mapboxgl.Popup().setHTML(`
         <strong>House 5</strong><br>
         iHelp Eco Village, Mkuranga, Tanzania<br>
         <img class="popup-image" src="https://passivehouseplus.co.uk/media/k2/items/cache/66a54350e94d9d93612885188af705a6_XL.jpg?t=20250108_163553" alt="House 5 Image" />
       `))
       .addTo(map);
+
+    // Circle generation function
+    function createGeoJSONCircle(center, radiusInKm, points = 64) {
+      const coords = {
+        latitude: center[1],
+        longitude: center[0]
+      };
+
+      const km = radiusInKm;
+      const ret = [];
+      const distanceX = km / (111.32 * Math.cos(coords.latitude * Math.PI / 180));
+      const distanceY = km / 110.574;
+
+      for (let i = 0; i < points; i++) {
+        const theta = (i / points) * (2 * Math.PI);
+        const x = distanceX * Math.cos(theta);
+        const y = distanceY * Math.sin(theta);
+        ret.push([coords.longitude + x, coords.latitude + y]);
+      }
+      ret.push(ret[0]);
+
+      return {
+        type: 'Feature',
+        geometry: {
+          type: 'Polygon',
+          coordinates: [ret]
+        }
+      };
+    }
+
+    const circleGeoJSON = createGeoJSONCircle(pinCoords, 5);
+
+    map.addSource('circle', {
+      type: 'geojson',
+      data: circleGeoJSON
+    });
+
+    map.addLayer({
+      id: 'circle-layer',
+      type: 'fill',
+      source: 'circle',
+      paint: {
+        'fill-color': 'white',
+        'fill-opacity': 0.15
+      }
+    });
+
+    map.addLayer({
+      id: 'circle-outline',
+      type: 'line',
+      source: 'circle',
+      paint: {
+        'line-color': 'white',
+        'line-width': 1
+      }
+    });
 
     map.addControl(new mapboxgl.NavigationControl({ showCompass: false }), 'top-right');
   });
