--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
     const pinCoords = [39.271406, -7.046950];
 
     // White marker
-    new mapboxgl.Marker({ color: 'white' })
+    new mapboxgl.Marker({ color: 'fafab6' })
       .setLngLat(pinCoords)
       .setPopup(new mapboxgl.Popup().setHTML(`
         <strong>House 5</strong><br>
@@ -164,7 +164,7 @@
       type: 'fill',
       source: 'circle',
       paint: {
-        'fill-color': 'white',
+        'fill-color': 'fafab6',
         'fill-opacity': 0.15
       }
     });
@@ -174,7 +174,7 @@
       type: 'line',
       source: 'circle',
       paint: {
-        'line-color': 'white',
+        'line-color': 'fafab6',
         'line-width': 1
       }
     });
