--- a/index.html
+++ b/index.html
@@ -48,10 +48,11 @@
       width: 100%;
       text-align: left;
       padding: 6px 0;
+      margin-bottom: 6px;
     }
 
     #opacityControls {
-      margin-top: 6px;
+      margin-bottom: 12px;
       display: none;
     }
 
@@ -69,7 +70,7 @@
       width: 100%;
       height: auto;
       display: block;
-      max-height: 200px; /* adjust as needed */
+      max-height: 200px;
       object-fit: contain;
     }
 
@@ -79,6 +80,22 @@
       height: auto;
       margin-top: 6px;
       display: block;
+    }
+
+    @media (max-width: 600px) {
+      button.toggle-button {
+        font-size: 14px;
+        padding: 4px 0;
+      }
+
+      #opacityWrapper {
+        max-width: 200px;
+        padding: 6px 10px;
+      }
+
+      #legendContainer img {
+        max-height: 150px;
+      }
     }
   </style>
 </head>
@@ -133,10 +150,8 @@
       map.setPaintProperty('koppen-layer', 'fill-opacity', parseFloat(e.target.value));
     });
 
-    // Approximate pin location
     const pinCoords = [39.271406, -7.046950];
 
-    // Marker with colour #e8e192
     new mapboxgl.Marker({ color: '#e8e192' })
       .setLngLat(pinCoords)
       .setPopup(new mapboxgl.Popup().setHTML(`
@@ -146,7 +161,6 @@
       `))
       .addTo(map);
 
-    // Circle generation function
     function createGeoJSONCircle(center, radiusInKm, points = 64) {
       const coords = {
         latitude: center[1],
@@ -205,7 +219,6 @@
     map.addControl(new mapboxgl.NavigationControl({ showCompass: false }), 'top-right');
   });
 
-  // Toggle controls independently
   document.getElementById('toggleOpacity').addEventListener('click', () => {
     const opacityControls = document.getElementById('opacityControls');
     opacityControls.style.display = opacityControls.style.display === 'none' ? 'block' : 'none';
