--- a/index.html
+++ b/index.html
@@ -8,13 +8,15 @@
   <link href="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.css" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
   <style>
-    body, html,
-    #opacityWrapper,
-    #toggleOpacity,
-    .mapboxgl-ctrl,
-    .mapboxgl-popup-content {
-      font-family: 'Ubuntu', sans-serif !important;
-    }
+  body, html,
+  #opacityWrapper,
+  #toggleOpacity,
+  #toggleLegend,
+  .mapboxgl-ctrl,
+  .mapboxgl-popup-content {
+    font-family: 'Ubuntu', sans-serif !important;
+  }
+
 
     body, html {
       margin: 0;
