--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 
   <button id="toggleLegend" class="toggle-button" title="Toggle legend">Show Legend</button>
   <div id="legendContainer">
-    <img src="https://i.ibb.co/ZzT1K3gk/legend.png" alt="Climate Zones Legend" />
+    <img src="https://i.ibb.co/Tq4m28dB/Koppen-geiger-overlay-1.jpg" alt="Climate Zones Legend" />
   </div>
 </div>
 
