--- a/index.html
+++ b/index.html
@@ -158,14 +158,18 @@
       map.setPaintProperty('koppen-layer', 'fill-opacity', parseFloat(e.target.value));
     });
 
-    const pinCoords = [39.271406, -7.046950];
+    const pinCoords = [39.252324, -7.056898];
 
     new mapboxgl.Marker({ color: '#e8e192' })
       .setLngLat(pinCoords)
       .setPopup(new mapboxgl.Popup().setHTML(`
-        <strong>House 5</strong><br>
-        iHelp Eco Village, Mkuranga, Tanzania<br>
-        <img class="popup-image" src="https://passivehouseplus.co.uk/media/k2/items/cache/66a54350e94d9d93612885188af705a6_XL.jpg?t=20250108_163553" alt="House 5 Image" />
+        <div style="font-family: 'Ubuntu', sans-serif;">
+          <strong>House 5</strong><br>
+          iHelp Eco Village, Mkuranga, Tanzania<br>
+          <span style="color: #62a7f2;">Tropical Savannah (Aw)</span><br>
+          <span style="font-style: italic; color: black;">Marked location is not exact</span><br>
+          <img class="popup-image" src="https://passivehouseplus.co.uk/media/k2/items/cache/66a54350e94d9d93612885188af705a6_XL.jpg?t=20250108_163553" alt="House 5 Image" />
+        </div>
       `))
       .addTo(map);
 
