--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
           <strong>House 5</strong><br>
           iHelp Eco Village, Mkuranga, Tanzania<br>
           <span style="color: #62a7f2;">Tropical Savannah (Aw)</span><br>
-          <span style="font-style: italic; color: black;">Marked location is not exact</span><br>
+          <span style="font-style: italic; color: black;">*Marked location is not exact</span><br>
           <img class="popup-image" src="https://passivehouseplus.co.uk/media/k2/items/cache/66a54350e94d9d93612885188af705a6_XL.jpg?t=20250108_163553" alt="House 5 Image" />
         </div>
       `))
