--- a/index.html
+++ b/index.html
@@ -113,8 +113,11 @@
 
   <button id="toggleLegend" class="toggle-button" title="Toggle legend">Show Legend</button>
   <div id="legendContainer">
-    <img src="https://i.ibb.co/ZzT1K3gk/legend.png" alt="Climate Zones Legend" />
+    <a href="https://doi.org/10.1038/s41597-023-02549-6" target="_blank" rel="noopener noreferrer">
+      <img src="https://i.ibb.co/ZzT1K3gk/legend.png" alt="Climate Zones Legend" />
+    </a>
   </div>
+
 </div>
 
 <script>
