--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
       padding: 6px 0;
     }
 
-    button#toggleLegend {
-      margin-top: 8px;
+    #toggleLegend {
+      margin-top: 10px;
     }
 
     #opacityControls {
@@ -117,7 +117,6 @@
       <img src="https://i.ibb.co/ZzT1K3gk/legend.png" alt="Climate Zones Legend" />
     </a>
   </div>
-
 </div>
 
 <script>
@@ -162,13 +161,15 @@
     new mapboxgl.Marker({ color: '#e8e192' })
       .setLngLat(pinCoords)
       .setPopup(new mapboxgl.Popup().setHTML(`
-        <div style="font-family: 'Ubuntu', sans-serif;">
-          <strong>House 5</strong><br>
-          iHelp Eco Village, Mkuranga, Tanzania<br>
-          <span style="color: #62a7f2;">Tropical Savannah (Aw)</span><br>
-          <span style="font-style: italic; color: black;">Marked location is not exact.</span><br>
-          <img class="popup-image" src="https://passivehouseplus.co.uk/media/k2/items/cache/66a54350e94d9d93612885188af705a6_XL.jpg?t=20250108_163553" alt="House 5 Image" />
-        </div>
+        <a href="https://passivehouseplus.co.uk/magazine/feature/tanzanian-children-s-eco-village-aims-to-inspire-low-carbon-example" target="_blank" rel="noopener noreferrer" style="text-decoration: none; color: inherit;">
+          <div style="font-family: 'Ubuntu', sans-serif;">
+            <strong>House 5</strong><br>
+            iHelp Eco Village, Mkuranga, Tanzania<br>
+            <span style="color: #62a7f2;">Tropical Savannah (Aw)</span><br>
+            <span style="font-style: italic; color: black;">*Marked location is not exact</span><br>
+            <img class="popup-image" src="https://passivehouseplus.co.uk/media/k2/items/cache/66a54350e94d9d93612885188af705a6_XL.jpg?t=20250108_163553" alt="House 5 Image" />
+          </div>
+        </a>
       `))
       .addTo(map);
 
