--- a/index.html
+++ b/index.html
@@ -106,20 +106,20 @@
 <body>
 <div id="map"></div>
 <div id="opacityWrapper">
-  <div class="control-group">
-    <button id="toggleOpacity" class="toggle-button" title="Toggle opacity control">Show Climate Zones</button>
-    <div id="opacityControls">
-      <input type="range" id="opacitySlider" min="0" max="1" step="0.05" value="0.5" />
-    </div>
+  <button id="toggleOpacity" class="toggle-button" title="Toggle opacity control" style="margin-bottom: 10px;">
+    Show Climate Zones
+  </button>
+  <div id="opacityControls" style="display: none;">
+    <input type="range" id="opacitySlider" min="0" max="1" step="0.05" value="0.5" />
   </div>
 
-  <div class="control-group">
-    <button id="toggleLegend" class="toggle-button" title="Toggle legend">Show Legend</button>
-    <div id="legendContainer">
-      <a href="https://doi.org/10.1038/s41597-023-02549-6" target="_blank" rel="noopener noreferrer">
-        <img src="https://i.ibb.co/ZzT1K3gk/legend.png" alt="Climate Zones Legend" />
-      </a>
-    </div>
+  <button id="toggleLegend" class="toggle-button" title="Toggle legend">
+    Show Legend
+  </button>
+  <div id="legendContainer" style="display: none; margin-top: 6px;">
+    <a href="https://doi.org/10.1038/s41597-023-02549-6" target="_blank" rel="noopener noreferrer">
+      <img src="https://i.ibb.co/ZzT1K3gk/legend.png" alt="Climate Zones Legend" style="width: 100%; height: auto; display: block; max-height: 200px; object-fit: contain;" />
+    </a>
   </div>
 </div>
 
