--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 
     const pinCoords = [39.252324, -7.056898];
 
-    new mapboxgl.Marker({ color: '#e8e192' })
+    new mapboxgl.Marker({ color: '#FF0000' })
       .setLngLat(pinCoords)
       .setPopup(new mapboxgl.Popup().setHTML(`
         <a href="https://passivehouseplus.co.uk/magazine/feature/tanzanian-children-s-eco-village-aims-to-inspire-low-carbon-example"
@@ -171,7 +171,7 @@
           <div style="font-family: 'Ubuntu', sans-serif;">
             <strong>House 5</strong><br>
             iHelp Eco Village, Mkuranga, Tanzania<br>
-            <span style="color: #62a7f2;">Tropical Savannah (Aw)</span><br>
+            <span style="color: #FF0000;">Tropical Savannah (Aw)</span><br>
             <span style="font-style: italic; color: black;">Marked location is not exact.</span><br>
             <img class="popup-image" src="https://passivehouseplus.co.uk/media/k2/items/cache/66a54350e94d9d93612885188af705a6_XL.jpg?t=20250108_163553" alt="House 5 Image" />
           </div>
@@ -219,7 +219,7 @@
       type: 'fill',
       source: 'circle',
       paint: {
-        'fill-color': '#e8e192',
+        'fill-color': '#FF0000',
         'fill-opacity': 0.15
       }
     });
@@ -229,7 +229,7 @@
       type: 'line',
       source: 'circle',
       paint: {
-        'line-color': '#e8e192',
+        'line-color': '#FF0000',
         'line-width': 1
       }
     });
