--- a/index.html
+++ b/index.html
@@ -9,10 +9,6 @@
   <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
   <style>
     body, html,
-    #opacityWrapper,
-    #legendWrapper,
-    #toggleOpacity,
-    #toggleLegend,
     .mapboxgl-ctrl,
     .mapboxgl-popup-content {
       font-family: 'Ubuntu', sans-serif !important;
@@ -29,27 +25,19 @@
       height: 100%;
     }
 
-    #opacityWrapper,
-    #legendWrapper {
+    #controlWrapper {
       position: absolute;
+      top: 10px;
       left: 10px;
       background: white;
       padding: 8px 12px;
       border-radius: 6px;
       box-shadow: 0 0 6px rgba(0,0,0,0.15);
-      z-index: 10;
       max-width: 300px;
+      z-index: 10;
     }
 
-    #opacityWrapper {
-      top: 10px;
-    }
-
-    #legendWrapper {
-      top: 70px;
-    }
-
-    button.toggle-button {
+    .toggle-button {
       cursor: pointer;
       background: none;
       border: none;
@@ -60,18 +48,13 @@
       padding: 6px 0;
     }
 
-    #opacityControls {
+    #opacityControls,
+    #legendContainer {
       margin-top: 6px;
       display: none;
     }
 
     #opacitySlider {
-      width: 100%;
-    }
-
-    #legendContainer {
-      margin-top: 6px;
-      display: none;
       width: 100%;
     }
 
@@ -93,15 +76,14 @@
     }
 
     @media (max-width: 600px) {
-      button.toggle-button {
-        font-size: 14px;
-        padding: 4px 0;
-      }
-
-      #opacityWrapper,
-      #legendWrapper {
+      #controlWrapper {
         max-width: 200px;
         padding: 6px 10px;
+      }
+
+      .toggle-button {
+        font-size: 14px;
+        padding: 4px 0;
       }
 
       #legendContainer img {
@@ -113,14 +95,12 @@
 <body>
 <div id="map"></div>
 
-<div id="opacityWrapper">
+<div id="controlWrapper">
   <button id="toggleOpacity" class="toggle-button" title="Toggle opacity control">Show Climate Zones</button>
   <div id="opacityControls">
     <input type="range" id="opacitySlider" min="0" max="1" step="0.05" value="0.5" />
   </div>
-</div>
 
-<div id="legendWrapper">
   <button id="toggleLegend" class="toggle-button" title="Toggle legend">Show Legend</button>
   <div id="legendContainer">
     <a href="https://doi.org/10.1038/s41597-023-02549-6" target="_blank" rel="noopener noreferrer">
@@ -171,7 +151,9 @@
     new mapboxgl.Marker({ color: '#FF0000' })
       .setLngLat(pinCoords)
       .setPopup(new mapboxgl.Popup().setHTML(`
-        <a href="https://passivehouseplus.co.uk/magazine/feature/tanzanian-children-s-eco-village-aims-to-inspire-low-carbon-example" target="_blank" rel="noopener noreferrer" style="text-decoration: none; color: inherit; font-family: 'Ubuntu', sans-serif;">
+        <a href="https://passivehouseplus.co.uk/magazine/feature/tanzanian-children-s-eco-village-aims-to-inspire-low-carbon-example"
+           target="_blank" rel="noopener noreferrer"
+           style="text-decoration: none; color: inherit; font-family: 'Ubuntu', sans-serif;">
           <strong>House 5</strong><br>
           iHelp Eco Village, Mkuranga, Tanzania<br>
           <span style="color: #62a7f2;">Tropical Savannah (Aw)</span><br>
